# Ondsel-Lens-Addon

./: .gitignore  APIClient.py  DataModels.py  Init.py  InitGui.py  LICENSE  LinkModel.py  ManageSharingLinksDialog.ui  OndselLensAddon.py  README.md  REUSE.toml  Readme.md  SharingLinkEditDialog.ui  Utils.py  VersionModel.py  WorkSpace.py  Workspace.py  WorkspaceListDelegate.py  WorkspaceView.py  WorkspaceView.ui  _mock_freecad.py  changeLog.md  check_links.py  handlers.py  lens_command.py  lens_handler.FCMacro  markdown.py  package.xml  register_lens_handler.py  testAPI.py  testDataModels.py  testFileListModel.py  testLinkModel.py  testVersionModel.py  testWorkspaceListModel.py  testshape.FCStd  version.py  versioning.yml  z_Package.xml
.github/workflows/: black.yml  main.yml
_mock_environment/: MockFreeCADGui.ui  MockStartPanel.ui  README.md  fc_requirements.txt  main.py  requirements.txt  theme
_mock_environment/libs/AddonManager/: MockAddonManager.py  pyproject.toml  setup.cfg  setup.py
_mock_environment/libs/AddonManager/AddonManager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
_mock_environment/libs/FreeCAD/: pyproject.toml  setup.cfg  setup.py
_mock_environment/libs/FreeCAD/FreeCAD/: MockConsole.py  MockFreeCAD.py  __init__.py
_mock_environment/libs/FreeCAD/FreeCAD.egg-info/: PKG-INFO  SOURCES.txt
_mock_environment/libs/FreeCADGui/: MockFreeCADGui.py  pyproject.toml  setup.cfg  setup.py
_mock_environment/libs/FreeCADGui/FreeCADGui/: __init__.py
_mock_environment/libs/FreeCADGui/FreeCADGui.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
_mock_environment/libs/Parameters/: MockParameters.py
_mock_environment/libs/Part/: pyproject.toml  setup.cfg  setup.py
_mock_environment/libs/Part/Part.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
components/: QTableWidgetWithKbReturnSupport.py  choose_download_action_dialog.py  choose_from_lens_dialog.py  choose_workspace_action_dialog.py  login_dialog.py  sharelink_edit_dialog.py  workspace_dialogs.py
data_models/: VersionModel.py  curation.py  file_summary.py  file_version.py  nav_ref.py
delegates/: CurationItem.ui  SearchResultItem.ui  curation.py  curation_display_delegate.py  file_list_delegate.py  linked_list_delegate.py  promotion_delegate.py  public_share_delegate.py  search.py  search_result_delegate.py  workspace_list_delegate.py
gui/: ManageSharingLinksDialog.ui  SharingLinkEditDialog.ui
integrations/reloadablefile/: reloadable.py  taskpanel.ui
integrations/reloadablefile/resources/: resource.qrc
libs/PyJWT-2.7.0.dist-info/: RECORD
macros/: svg_post.py
models/: curation.py  directory.py  directory_summary.py  error_msg.py  file.py  file_detail.py  file_summary.py  file_version.py  group_summary.py  groups_or_users.py  message.py  model.py  model_summary.py  nav_ref.py  organization_summary.py  promotion.py  share_link.py  share_link_summary.py  user_summary.py  workspace_dataclass.py  workspace_list_model.py  workspace_model.py  workspace_summary.py
qflowview/: flowlayout.py  qflowview.py
tests/: testAPI.py  testFileListModel.py  testVersionModel.py  testWorkspaceListModel.py  testWorkspaceModel.py
views/: SearchResultItem.ui  SearchResultItemEditor.ui  oflowlayout.py  ondsel_promotions_view.py  public_shares_view.py  search.py  search_results_view.py
