<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Ondsel Lens</name>
  <description>Workspace manager for Ondsel Lens workspaces</description>
  <version>2024.01.16.01</version>
  <date>2024-01-16</date>
  <maintainer email="development@ondsel.com">Ondsel Development</maintainer>
  <license file="LICENSE">MIT</license>
  <url type="repository" branch="master">https://github.com/ondsel-Development/ondsel-lens</url>
  <url type="readme">https://github.com/ondsel-Development/ondsel-lens/blob/master/README.md</url>
  <icon>Resources/icons/OndselWorkbench.svg</icon>

  <content>
    <workbench>
      <classname>WorkspaceView</classname>
      <name>Ondsel Lens Addon</name>
      <subdirectory>./</subdirectory>
      <description>Workspace Manager for Ondsel and Local Workspaces</description>
      <icon>Resources/icons/OndselWorkbench.svg</icon>
      <tag>developers</tag>

      <!-- Python package dependencies (no support for version information) -->
      <depend>pyjwt</depend>
      <depend>requests</depend>
      <depend>tzlocal</depend>
    </workbench>
  </content>

</package>
