<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
<package format="1" xmlns="https://wiki.freecad.org/Package_Metadata">
  <name>Ondsel Lens Addon</name>
  <description>Workspace manager for Ondsel Lens workspaces</description>
  <version>2024.09.13.02</version>
  <date>2024-09-13</date>
  <maintainer email="development@ondsel.com">Ondsel Development</maintainer>
  <license file="LICENSE">MIT</license>
  <url type="repository" branch="main">https://github.com/Ondsel-Development/Ondsel-Lens-Addon</url>
  <url type="readme">https://github.com/Ondsel-Development/Ondsel-Lens-Addon/blob/main/README.md</url>
  <icon>Resources/icons/OndselWorkbench.svg</icon>

  <content>
    <workbench>
      <classname>WorkspaceView</classname>
      <name>Ondsel Lens Addon</name>
      <subdirectory>./</subdirectory>
      <description>Workspace manager for Ondsel workspaces</description>
      <icon>Resources/icons/OndselWorkbench.svg</icon>
      <tag>developers</tag>

      <!-- Python package dependencies (no support for version information) -->
      <depend>pyjwt</depend>
      <depend>requests</depend>
      <depend>tzlocal</depend>
      <depend>mistune</depend>
    </workbench>
  </content>

</package>
